Fixed bad spacing below #content on News page.
git-svn-id: https://vassalengine.svn.sourceforge.net/svnroot/vassalengine/site-src/trunk@5240 67b53d14-2c14-4ace-a08f-0dab2b34000c

--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ acronym {
 
   font-size: 1.2em;
 /*  line-height: 1.25em; */
+  overflow: auto;
 }
 
 #content h1 {
@@ -191,5 +192,3 @@ div.date {
 div.date:first-line {
   font-size: 70%;
 }
-
-
